// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option matches the snapshot when al the parameters are passed and the NOT_ANSWERED is selected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card"
        style="width: 18rem;"
      >
        <div
          class="card-body"
        >
          <p
            class="card-text"
          >
            Play futbol
          </p>
          <button
            class="btn btn-primary"
            style="width: auto;"
            type="button"
            value="optionOne"
          >
            Click
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card"
      style="width: 18rem;"
    >
      <div
        class="card-body"
      >
        <p
          class="card-text"
        >
          Play futbol
        </p>
        <button
          class="btn btn-primary"
          style="width: auto;"
          type="button"
          value="optionOne"
        >
          Click
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Option matches the snapshot when al the parameters are passed and the optionOne is selected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card"
        style="width: 18rem;"
      >
        <div
          class="card-body"
        >
          <p
            class="card-text"
          >
            Play futbol
          </p>
          <button
            class="btn btn-primary"
            disabled=""
            style="width: auto;"
            type="button"
            value="optionOne"
          >
            Click
          </button>
          <p
            class="card-text"
            style="color: green;"
          >
             ✔️ Option selected.
          </p>
          <p
            class="card-text"
            style="color: blue;"
          >
             
            People voted: 
            5
          </p>
          <p
            class="card-text"
            style="color: blue;"
          >
             
            Percentage voted: 
            50
             %
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card"
      style="width: 18rem;"
    >
      <div
        class="card-body"
      >
        <p
          class="card-text"
        >
          Play futbol
        </p>
        <button
          class="btn btn-primary"
          disabled=""
          style="width: auto;"
          type="button"
          value="optionOne"
        >
          Click
        </button>
        <p
          class="card-text"
          style="color: green;"
        >
           ✔️ Option selected.
        </p>
        <p
          class="card-text"
          style="color: blue;"
        >
           
          People voted: 
          5
        </p>
        <p
          class="card-text"
          style="color: blue;"
        >
           
          Percentage voted: 
          50
           %
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
